<resources>
    <string name="app_name">Fruta Grátis</string>
    <string name="in_email_hint">E-mail</string>
    <string name="in_senha_hint">Senha</string>
    <string name="bt_entrar">Entrar</string>
    <string name="bt_registrar">Registrar</string>
    <string name="nome_app">Fruta Grátis</string>
    <string name="in_primeiro_nome_hint">Primeiro Nome</string>
    <string name="in_sobrenome_hint">Sobrenome</string>
    <string name="recup_senha">ESQUECEU SUA SENHA?</string>
    <string name="titulo_act_registrar">Registrar Novo Usuário</string>
    <string name="titulo_recup_senha">Recuperar Senha</string>
    <string name="digite_email">Digite o e-mail cadastrado</string>
    <string name="bt_recuperar">Recuperar</string>
    <string name="bt_enviar">Enviar</string>
    <string name="acao_configurar">Configurações</string>
    <string name="acao_pesquisar">Buscar Fruta</string>
    <string name="acao_sair">Sair</string>
    <string name="titulo_nova_arvore">Nova Árvore</string>
    <string name="bt_salvar_nova_fruta">Adicionar</string>
    <string name="bt_cancelar_nova_fruta">Cancelar</string>
    <string name="label_sel_frutas">Selecione uma fruta</string>
    <string name="label_sel_estado_producao">Qual o estado da árvore?</string>
    <string name="label_sel_facilidade_de_colheita">Facilidade de colheita</string>

    <!-- Lista de frutas -->
    <string-array name="futas_array">
        <item>Manga</item>
        <item>Jaca</item>
        <item>Goiaba</item>
        <item>Jambo</item>
    </string-array>

    <!-- Estados da árvore -->
    <string-array name="estado_de_producao">
        <item>Sem frutos ou flores</item>
        <item>Com flores</item>
        <item>Com frutos verdes</item>
        <item>Com frutos maduros</item>
    </string-array>

    <string-array name="facilidade_de_colheita">
        <item>Difícil</item>
        <item>Fácil</item>
    </string-array>
    <string name="title_activity_nova_map">Map</string>
    <string name="in_pesquisa_hint">Fruta</string>
</resources>
