<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_init"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="barlapcb.frutagratis.InitActivity">

    <TextView
        android:id="@+id/titulo_app"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        android:text="@string/nome_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="48dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/in_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/in_email_hint"
        android:maxLines="1"
        android:inputType="textEmailAddress"/>


    <EditText
        android:id="@+id/in_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/in_senha_hint"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/bt_entrar"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:onClick="entrar"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/bt_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/bt_registrar"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:onClick="registrarNovoUsuario"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recup_senha"
        android:layout_gravity="center"
        android:textColor="@color/linkTextColor"
        android:onClick="recuperarSenha"/>
</LinearLayout>
