<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="barlapcb.frutagratis.RegistrarActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_registrar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/in_primeiro_nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/in_primeiro_nome_hint"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/in_sobrenome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/in_sobrenome_hint"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/in_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/in_email_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/in_senha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/in_senha_hint"
            android:maxLines="1"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/bt_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_enviar"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:onClick="persistirUsuario"
            android:background="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>
